# swapi-scraper

./: .gitignore  Cargo.toml  README.md  app_config.toml
scraper/: Cargo.toml
scraper/src/: error.rs  main.rs  model.rs
sw-graph/: Cargo.toml
sw-graph/src/: main.rs
sw-scraper/: Cargo.toml  build.rs
sw-scraper/src/: error.rs  logger.rs  main.rs  model.rs  scraper.rs  utils.rs
