[package]
edition = "2018"
name = "scraper"
version = "0.1.0"

[dependencies]
futures = "0.3"
log = "0.4"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
url = {version = "2", features = ["serde"]}
uuid = {version = "0.8", features = ["v4", "serde"]}
