[package]
edition = "2018"
name = "sw-scraper"
version = "0.1.0"

[dependencies]
log = "0.4"
env_logger = "0.9"
config = "0.11"
 
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
url = {version = "2", features = ["serde"]}
