[package]
build = "build.rs"
edition = "2018"
name = "sw-scraper"
version = "0.1.0"

[[bin]]
name = "sw-scraper"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 'z'

[build-dependencies]
anyhow = "1"
vergen = "6"

[dependencies]
config = "0.11"
env_logger = "0.9"
log = "0.4"

actix = "0.12"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
url = {version = "2", features = ["serde"]}

### ACTIX TEST STUFF
slog = "2"
slog-async = "2"
slog-json = "2"
slog-term = "2"

lazy_static = "1"
thread-id = "4"
